Fix z-index issue with dialog

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -220,6 +220,7 @@ header {
 }
 
 .dialog {
+  z-index: 10;
   display: none;
   position: absolute;
   left: 0;
